remove deprecated MaxPermSize option