@@ -34,7 +34,7 @@ Test /              fork := false
 Test /       logBuffered := false
 Test / parallelExecution := true
 
-scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+scriptedLaunchOpts ++= Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
 scriptedBufferLog := true
 
 def toSbtPlugin(m: ModuleID) = Def.setting(
